@@ -37,11 +37,13 @@ is used as a value in the domain field of the #GError structure.
 
 </para>
 
-@program: 
-@doc_name: 
+@file_name: 
 @link_id: 
 @error: 
 @Returns: 
+<!-- # Unused Parameters # -->
+@program: 
+@doc_name: 
 
 
 <!-- ##### FUNCTION gnome_help_display_desktop ##### -->
@@ -50,10 +52,13 @@ is used as a value in the domain field of the #GError structure.
 </para>
 
 @program: 
-@doc_name: 
+@doc_id: 
+@file_name: 
 @link_id: 
 @error: 
 @Returns: 
+<!-- # Unused Parameters # -->
+@doc_name: 
 
 
 <!-- ##### FUNCTION gnome_help_display_uri ##### -->
