@@ -1,3 +1,12 @@
+Wed Oct 31 18:20:44 2001  Jonathan Blandford  <jrb@redhat.com>>
+
+	* gnome-help.c (gnome_help_display): Simple variant of showing
+	help function.  The one that 90% of users will use.
+	(gnome_help_display_with_doc_id): Full variant.
+	(gnome_help_display_desktop): Fix up a bit.
+
+	* gnome-i18n.c: doc updates.
+
 2001-10-30  jacob berkman  <jacob@ximian.com>
 
 	* libgnome-2.0.pc.in (Cflags): 
